android-lang/gen/com/android/tools/idea/lang/aidl/parser/AidlParser.java
/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// ATTENTION: This file has been automatically generated from Aidl.bnf. Do not edit it manually.

package com.android.tools.idea.lang.aidl.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.android.tools.idea.lang.aidl.lexer.AidlTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class AidlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return document(b, l + 1);
  }

  /* ********************************************************** */
  // AT qualified_name LPAREN const_expr RPAREN
  //   |   AT qualified_name LPAREN [annotation_parameter_list] RPAREN
  //   |   AT qualified_name
  public static boolean annotation_element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_element")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = annotation_element_0(b, l + 1);
    if (!r) r = annotation_element_1(b, l + 1);
    if (!r) r = annotation_element_2(b, l + 1);
    exit_section_(b, m, ANNOTATION_ELEMENT, r);
    return r;
  }

  // AT qualified_name LPAREN const_expr RPAREN
  private static boolean annotation_element_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_element_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && qualified_name(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && const_expr(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // AT qualified_name LPAREN [annotation_parameter_list] RPAREN
  private static boolean annotation_element_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_element_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && qualified_name(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && annotation_element_1_3(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // [annotation_parameter_list]
  private static boolean annotation_element_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_element_1_3")) return false;
    annotation_parameter_list(b, l + 1);
    return true;
  }

  // AT qualified_name
  private static boolean annotation_element_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_element_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && qualified_name(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // annotation_element*
  static boolean annotation_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_list")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotation_element(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotation_list", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // name_component ASSIGN const_expr
  static boolean annotation_parameter(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_parameter")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = name_component(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && const_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // annotation_parameter (COMMA annotation_parameter)*
  static boolean annotation_parameter_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_parameter_list")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = annotation_parameter(b, l + 1);
    r = r && annotation_parameter_list_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA annotation_parameter)*
  private static boolean annotation_parameter_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_parameter_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotation_parameter_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotation_parameter_list_1", c)) break;
    }
    return true;
  }

  // COMMA annotation_parameter
  private static boolean annotation_parameter_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_parameter_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && annotation_parameter(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // declaration*
  public static boolean body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body")) return false;
    Marker m = enter_section_(b, l, _NONE_, BODY, "<body>");
    while (true) {
      int c = current_position_(b);
      if (!declaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "body", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // LBRACE expression RBRACE
  static boolean brace_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "brace_expr")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // qualified_name typeArguments?
  static boolean class_or_interface_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_or_interface_type")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = qualified_name(b, l + 1);
    p = r; // pin = 1
    r = r && class_or_interface_type_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // typeArguments?
  private static boolean class_or_interface_type_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_or_interface_type_1")) return false;
    typeArguments(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // TRUE_KEYWORD | FALSE_KEYWORD
  static boolean const_boolean(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_boolean")) return false;
    if (!nextTokenIs(b, "", FALSE_KEYWORD, TRUE_KEYWORD)) return false;
    boolean r;
    r = consumeToken(b, TRUE_KEYWORD);
    if (!r) r = consumeToken(b, FALSE_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // expression
  static boolean const_expr(PsiBuilder b, int l) {
    return expression(b, l + 1);
  }

  /* ********************************************************** */
  // [PLUS] [MINUS] (INTVALUE | FLOATVALUE | HEXVALUE)
  static boolean const_number(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_number")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = const_number_0(b, l + 1);
    r = r && const_number_1(b, l + 1);
    r = r && const_number_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [PLUS]
  private static boolean const_number_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_number_0")) return false;
    consumeToken(b, PLUS);
    return true;
  }

  // [MINUS]
  private static boolean const_number_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_number_1")) return false;
    consumeToken(b, MINUS);
    return true;
  }

  // INTVALUE | FLOATVALUE | HEXVALUE
  private static boolean const_number_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_number_2")) return false;
    boolean r;
    r = consumeToken(b, INTVALUE);
    if (!r) r = consumeToken(b, FLOATVALUE);
    if (!r) r = consumeToken(b, HEXVALUE);
    return r;
  }

  /* ********************************************************** */
  // CONST_KEYWORD type_element name_component ASSIGN const_expr SEMICOLON
  public static boolean constant_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_declaration")) return false;
    if (!nextTokenIs(b, CONST_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONST_KEYWORD);
    r = r && type_element(b, l + 1);
    r = r && name_component(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && const_expr(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, CONSTANT_DECLARATION, r);
    return r;
  }

  /* ********************************************************** */
  // const_expr (COMMA const_expr)*
  static boolean constant_value_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_value_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = const_expr(b, l + 1);
    r = r && constant_value_list_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA const_expr)*
  private static boolean constant_value_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_value_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!constant_value_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constant_value_list_1", c)) break;
    }
    return true;
  }

  // COMMA const_expr
  private static boolean constant_value_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_value_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && const_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !<<eof>> annotation_list unannotated_declaration
  static boolean declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<interface, parcelable, enum or union>");
    r = declaration_0(b, l + 1);
    r = r && annotation_list(b, l + 1);
    r = r && unannotated_declaration(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // !<<eof>>
  private static boolean declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eof(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IN_KEYWORD | OUT_KEYWORD | INOUT_KEYWORD
  static boolean direction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "direction")) return false;
    boolean r;
    r = consumeToken(b, IN_KEYWORD);
    if (!r) r = consumeToken(b, OUT_KEYWORD);
    if (!r) r = consumeToken(b, INOUT_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // optional_package imports body
  static boolean document(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "document")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = optional_package(b, l + 1);
    r = r && imports(b, l + 1);
    r = r && body(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // name_component (DOT name_component)*
  public static boolean dotted_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dotted_name")) return false;
    if (!nextTokenIs(b, "<name>", IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOTTED_NAME, "<name>");
    r = name_component(b, l + 1);
    r = r && dotted_name_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (DOT name_component)*
  private static boolean dotted_name_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dotted_name_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dotted_name_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dotted_name_1", c)) break;
    }
    return true;
  }

  // DOT name_component
  private static boolean dotted_name_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dotted_name_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && name_component(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE enumerators RBRACE | LBRACE enumerators COMMA RBRACE
  static boolean enum_decl_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_decl_body")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = enum_decl_body_0(b, l + 1);
    if (!r) r = enum_decl_body_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACE enumerators RBRACE
  private static boolean enum_decl_body_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_decl_body_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && enumerators(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACE enumerators COMMA RBRACE
  private static boolean enum_decl_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_decl_body_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && enumerators(b, l + 1);
    r = r && consumeTokens(b, 0, COMMA, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ENUM_KEYWORD dotted_name enum_decl_body
  public static boolean enum_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration")) return false;
    if (!nextTokenIs(b, ENUM_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM_DECLARATION, null);
    r = consumeToken(b, ENUM_KEYWORD);
    r = r && dotted_name(b, l + 1);
    p = r; // pin = 2
    r = r && enum_decl_body(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // name_component ASSIGN const_expr | name_component
  public static boolean enumerator_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumerator_declaration")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = enumerator_declaration_0(b, l + 1);
    if (!r) r = name_component(b, l + 1);
    exit_section_(b, m, ENUMERATOR_DECLARATION, r);
    return r;
  }

  // name_component ASSIGN const_expr
  private static boolean enumerator_declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumerator_declaration_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = name_component(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && const_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // enumerator_declaration (COMMA enumerator_declaration)*
  static boolean enumerators(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumerators")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = enumerator_declaration(b, l + 1);
    r = r && enumerators_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA enumerator_declaration)*
  private static boolean enumerators_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumerators_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!enumerators_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enumerators_1", c)) break;
    }
    return true;
  }

  // COMMA enumerator_declaration
  private static boolean enumerators_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumerators_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && enumerator_declaration(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // const_number (PLUS|MINUS|MULTIPLY|DIVIDE|MODULO|EQUALITY|NEQ|LSHIFT|RSHIFT|LEQ|LT|GEQ|GT) expression
  //   |  paren_expr (PLUS|MINUS|MULTIPLY|DIVIDE|MODULO|EQUALITY|NEQ|LSHIFT|RSHIFT|LEQ|LT|GEQ|GT) expression
  //   |  const_number (BITWISE_XOR|BITWISE_OR|BITWISE_AND|LOGICAL_OR|LOGICAL_AND) expression
  //   |  paren_expr (BITWISE_XOR|BITWISE_OR|BITWISE_AND|LOGICAL_OR|LOGICAL_AND) expression
  //   |  LPAREN expression RPAREN
  //   |  (BITWISE_COMPLEMENT|NOT) expression
  //   |  LBRACE constant_value_list [COMMA] RBRACE // allow trailing commas
  //   | C_STR PLUS (C_STR | CHARVALUE)
  //   |  brace_expr
  //   |  const_number
  //   |  const_boolean
  //   |  CHARVALUE
  //   |  C_STR
  //   |  qualified_name
  //   |  LBRACE RBRACE
  public static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION, "<expression>");
    r = expression_0(b, l + 1);
    if (!r) r = expression_1(b, l + 1);
    if (!r) r = expression_2(b, l + 1);
    if (!r) r = expression_3(b, l + 1);
    if (!r) r = expression_4(b, l + 1);
    if (!r) r = expression_5(b, l + 1);
    if (!r) r = expression_6(b, l + 1);
    if (!r) r = expression_7(b, l + 1);
    if (!r) r = brace_expr(b, l + 1);
    if (!r) r = const_number(b, l + 1);
    if (!r) r = const_boolean(b, l + 1);
    if (!r) r = consumeTokenFast(b, CHARVALUE);
    if (!r) r = consumeTokenFast(b, C_STR);
    if (!r) r = qualified_name(b, l + 1);
    if (!r) r = expression_14(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // const_number (PLUS|MINUS|MULTIPLY|DIVIDE|MODULO|EQUALITY|NEQ|LSHIFT|RSHIFT|LEQ|LT|GEQ|GT) expression
  private static boolean expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = const_number(b, l + 1);
    r = r && expression_0_1(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // PLUS|MINUS|MULTIPLY|DIVIDE|MODULO|EQUALITY|NEQ|LSHIFT|RSHIFT|LEQ|LT|GEQ|GT
  private static boolean expression_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_0_1")) return false;
    boolean r;
    r = consumeTokenFast(b, PLUS);
    if (!r) r = consumeTokenFast(b, MINUS);
    if (!r) r = consumeTokenFast(b, MULTIPLY);
    if (!r) r = consumeTokenFast(b, DIVIDE);
    if (!r) r = consumeTokenFast(b, MODULO);
    if (!r) r = consumeTokenFast(b, EQUALITY);
    if (!r) r = consumeTokenFast(b, NEQ);
    if (!r) r = consumeTokenFast(b, LSHIFT);
    if (!r) r = consumeTokenFast(b, RSHIFT);
    if (!r) r = consumeTokenFast(b, LEQ);
    if (!r) r = consumeTokenFast(b, LT);
    if (!r) r = consumeTokenFast(b, GEQ);
    if (!r) r = consumeTokenFast(b, GT);
    return r;
  }
